# cool-diff

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
examples/: barebones.rs  contains_check.rs  custom_renderer.rs  kubernetes.rs  match_configs.rs  openapi_pod.rs  strict.rs
src/: config.rs  diff.rs  k8s_schema.rs  lib.rs  model.rs
src/render/: mod.rs  yaml.rs
tests/: composite_keys.rs  k8s_fixtures.rs  k8s_schema_pod.rs
tests/fixtures/: configmap.diff  configmap.yaml  deployment.diff  deployment.yaml  pod.diff  pod.yaml  pod_schema.json  service.yaml  statefulset.diff  statefulset.yaml
