[package]
name = "cool-diff"
version = "0.1.0"
repository = "https://github.com/NickLarsenNZ/cool-diff"
description = "Compact, context-preserving diffs of structured data (serde_json::Value)"
keywords = ["diff", "yaml", "json", "kubernetes", "testing"]
categories = ["development-tools::testing", "data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
exclude = [".github/", "deny.toml", "RELEASE.md", "rust-toolchain.toml"]

[features]
color = ["dep:owo-colors", "dep:supports-color"]

[dependencies]
owo-colors = { version = "4", optional = true }
serde_json = "1"
snafu = "0.9"
supports-color = { version = "3", optional = true }

[dev-dependencies]
indoc = "2"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
